[gd_scene format=3 uid="uid://d0wdgmmrwbx5c"]

[ext_resource type="Script" uid="uid://c7oahjcvc8fh4" path="res://Characters/Player/ash.gd" id="1_xukp1"]
[ext_resource type="Script" uid="uid://dma2tnms3pih3" path="res://Characters/Player/camera_follow.gd" id="2_21xbq"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_21xbq"]
radius = 11.0
height = 34.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xukp1"]
radius = 9.0
height = 30.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_21xbq"]
radius = 11.0
height = 34.0

[node name="Ash" type="CharacterBody2D" unique_id=473811338]
script = ExtResource("1_xukp1")

[node name="Outline" type="MeshInstance2D" parent="." unique_id=368008941]
modulate = Color(0, 0, 0, 1)
position = Vector2(-2.3841858e-07, 1.3411045e-06)
mesh = SubResource("CapsuleMesh_21xbq")

[node name="MeshInstance2D" type="MeshInstance2D" parent="." unique_id=1555656899]
position = Vector2(-2.3841858e-07, 1.3411045e-06)
mesh = SubResource("CapsuleMesh_xukp1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1986543522]
shape = SubResource("CapsuleShape2D_21xbq")

[node name="Camera2D" type="Camera2D" parent="." unique_id=1890297834]
process_callback = 0
position_smoothing_enabled = true
script = ExtResource("2_21xbq")

[node name="CoyoteTimer" type="Timer" parent="." unique_id=1494018096]
wait_time = 0.15
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="." unique_id=1720576263]
wait_time = 0.1
one_shot = true

[node name="DashTimer" type="Timer" parent="." unique_id=21087262]
wait_time = 0.4
one_shot = true
